--- a/Shop.Web/appsettings.json
+++ b/Shop.Web/appsettings.json
@@ -7,6 +7,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
 
+  "Tokens": {
+    "Key": "asdfghjikbnvcgfdsrtfyhgcvgfxdgc",
+    "Issuer": "localhost",
+    "Audience": "users"
+  }
 }
+
+
